samples/_failures_safe/1761261129_f39cc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef862651.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_ef862651.c:162:13: error: expected expression at end of input
  162 |             case
      |             ^~~~
./samples/SAFE/__tmp_ef862651.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef862651.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef862651.c:162:13: error: expected declaration or statement at end of input
